--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "@types/node": "^20.8.6",
-    "ts-node": "^10.9.1"
+    "@types/node": "^20.8.7",
+    "ts-node": "^10.9.1",
+    "typescript": "latest"
   }
 }
